--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
-DB_DATABASE=digitalv_brahmani
-DB_USERNAME=digitalv_brahmani
+DB_DATABASE=brahmani
+DB_USERNAME=brahmani
 DB_PASSWORD=Digital@1620
 
 SESSION_DRIVER=database
