--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=103.181.200.38
-DB_DATABASE=brahmani
+DB_DATABASE=brahmanienterprise
 DB_USERNAME=brahmani
 DB_PASSWORD=Digital@1620
 
