--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.1",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "phpmailer/phpmailer": "^6.9",
         "yajra/laravel-datatables-oracle": "^11.1"
     },
     "require-dev": {
