--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:m2NvcPTRCUzU89gALDeZfL2DSyqbuwF6veTEuRr3R58=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost:2222
+APP_URL=https://brahmanienterprise.co.in
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -15,6 +15,8 @@ APP_MAINTENANCE_DRIVER=file
 PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
+
+COMPANY_NAME="Brahmani Enterprise"
 
 LOG_CHANNEL=stack
 LOG_STACK=single
@@ -64,3 +66,4 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+WEBSITE_URL="${APP_URL}"
