--- a/.env
+++ b/.env
@@ -26,9 +26,9 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=103.181.200.38
-DB_DATABASE=brahmanienterprise
+DB_DATABASE=brahmani
 DB_USERNAME=brahmani
-DB_PASSWORD=Digital@1620
+DB_PASSWORD="Ke12!sh@34#a$65^v%!@"
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
